@startuml "CharlesNorden-ClassDiagram"

package "GUIApp" {
    WinForms -- EngineController
}

package "LogicEngine" {
    class EngineController {
        -ItemContainers: List<Food> 
        -BasketContainer: List<Basket>
        {static} +createItem()
        {static} +changeItem()
        {static} +createBasket()
        {static} +addItemToBasket()
        {static} +removeItemFromBasket()
        {static} +deleteItem()
        {static} +deleteBasket()
        {static} +undo()
    }

    package "AbstractBaseClass" {
        abstract class Item << prototype >> {
            -color: ItemColor
            -shape: ItemShape
            -texture: ItemTexture
            -size: ItemSize
            +Name: String
            +Color: String
            +Shape: String
            +Texture: String
            +Size: String
        }

        abstract class Food extends Item {
            -taste: ItemTaste
            +Taste: String
        }
    }

    package "ItemAttributes" {
        enum ItemColor {
            BLUE
            GREEN
            YELLOW
            ORANGE
            RED
        }

        enum ItemShape {
            SQUARE
            CIRCLE
            OVAL
        }

        enum ItemTexture {
            FIRM
            SOFT
            CRUNCHY
            CHEWY
        }

        enum ItemSize {
            TINY
            SMALL
            MEDIUM
            LARGE
            YUGE
        }

        enum ItemTaste {
            SWEET
            SOUR
            BITTER
        }
    }

    package "RunTimeClass" {
        class Veggie extends Food {
        }

        class Fruit extends Food{
        }

        class Basket << generic >> {
            -contents: List<T>
        }

        note right of Basket::contents
            The contents of the basket are stored in a list.
            Elements of the list are homogeneous.
        end note
    }

    package Factory {
        class BasketFactory {
            +createBasket()
        }

        class FoodFactory {
            +createItem()
        }

        BasketFactory ..> Basket
        FoodFactory ..> Item

        EngineController -- BasketManager
        EngineController -- BasketFactory
        EngineController -- FoodFactory

        Basket --> "0..N" Item : contains
    }

    note bottom of BasketManager
        This controller manages the baskets and
        the items inside the baskets.
    end note

    note top of Item
        The member attributes are of enum types,
        which are converted to String upon query.
    end note

    note bottom of Basket
        A basket may contain multiple items.
        However, the items **must** be of the same type.
        For example, a basket may contain only fruits,
        or only vegetables, but not both.
    end note

}

@enduml